--- a/index.html
+++ b/index.html
@@ -30,51 +30,7 @@
       <main>
         <div class="contentBody">
           <section>
-            <h2 class="secTitle">パークチケット</h2>
-            <div class="columnWrap">
-              <div class="columnItem">
-                <a href="" class="btn-icn icn-ticket t-center">
-                  <span>新規<br />チケット購入</span>
-                </a>
-              </div>
-              <div class="columnItem">
-                <a href="" class="btn-icn icn-qr t-center">
-                  <span>チケット読み込み</span>
-                </a>
-              </div>
-            </div>
-            <a href="" class="btn-secondary w-100"
-              >パーク・インフォメーション</a
-            >
-          </section>
-          <section>
-            <h2 class="secTitle t-center">
-              パークに行く前にかかさずチェック！
-            </h2>
-            <p>
-              東京ディズニーリゾートに行、事前に準備しておくと便利な情報などをまとめました
-            </p>
-            <img
-              src="https://media2.tokyodisneyresort.jp/home/top/check-app03.jpg"
-              alt=""
-            />
-            <ul class="list-border-dotted">
-              <li class="listItem">
-                <p>東京ディズニーリゾートアプリ</p>
-              </li>
-              <li class="listItem">
-                <p>東京ディズニーリゾート 40 周年記念プライオリティパス</p>
-              </li>
-              <li class="listItem">
-                <p>ディズニー・プレミアアクセス</p>
-              </li>
-              <li class="listItem">
-                <p>スタンバイパス</p>
-              </li>
-              <li class="listItem">
-                <p>エントリー受付</p>
-              </li>
-            </ul>
+            <button type="button" class="btn-secondary w-100" id="executeStorage">実行</button>
           </section>
         </div>
       </main>
