--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         <div class="contentBody">
           <section>
             <button type="button" class="btn-secondary w-100" id="executeStorage">実行</button>
+            <p>
+              LocalStorage:
+              <span id="local"></span>
+            </p>
+            <p>
+              SessionStorage:
+              <span id="session"></span>
+            </p>
           </section>
         </div>
       </main>
